# setgame

./: .gitignore  .tool-versions  Cargo.toml  Makefile
api/: Cargo.toml
api/src/: config.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/assets/: base.css
frontend/src/components/: CardComponent.vue  GameComponent.vue
libcardgame/: Cargo.toml
libcardgame/src/: card.rs  game.rs  lib.rs  triple.rs
server/: Cargo.toml
server/src/: main.rs
server/src/card_game/: card.rs
setgame_server/: Cargo.toml
setgame_server/src/: main.rs
setgame_server/src/card_game/: features.rs  game.rs  mod.rs  triple.rs
src/: error.rs  main.rs
src/application/: mod.rs
src/card_game/: card.rs  features.rs  mod.rs
src/domain/: mod.rs
webapp/: index.html  vite.config.js
webapp/src/: App.vue
webapp/src/assets/: main.css
webapp/src/components/: CardComponent.vue  GameComponent.vue
