[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
libcardgame = { path = "../libcardgame" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.7.5"
tower-http = { version = "0.5.2" , features = ["fs"]}
serde = { version = "1.0.203", features = ["derive"] }
